# momepy

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  CITATION.md  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  asv.conf.json  codecov.yml  environment.yml  index.html  mp.py  prague.py  pyproject.toml  raster.tiff  readthedocs.yml  requirements.txt  sets_analysing.py  sets_analysing_cell.py  sets_analysing_street.py  sets_measuring.py  sets_measuring_cell.py  sets_measuring_street.py  setup.cfg  setup.py  test_tess.py  update_version_json.py  versions.json  vinohrady.py  zurich.py
.github/: dependabot.yml  release.yml
benchmarks/: bench_dimension.py  bench_distribution.py  bench_diversity.py  bench_elements.py  bench_graph.py  bench_intensity.py  bench_shape.py  bench_utils.py
ci/: dev.yaml
dev/: .buildinfo  api.html  contributing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sitemap.xml
docs/: api.rst  bibtex.json  conf.py  contributing.rst  environment.yaml  environment.yml  index.md  index.rst  install.rst  legacy_api.rst  modules.rst  momepy.rst  references.rst  requirements.txt  ruff.toml  tutorial.rst
environments/: Dockerfile  Readme.md
momepy/: __init__.py  _version.py  bvd.py  coins.py  conftest.py  connectivity.py  continuity.py  core.py  dimension.py  distribution.py  diversity.py  elements.py  graph.py  intensity.py  preprocessing.py  shape.py  sndi.py  streetscape.py  stroke_graph_anvy.pickle  stroke_graph_clse.pickle  stroke_graph_x2.ipynb  stroke_graph_x2.pickle  strokegraph.ipynb  strokegraph.py  strokegraph_anvy.ipynb  strokegraph_clse.ipynb  strokegraph_compare.ipynb  strokegraph_function_compare.ipynb  svf.py  utils.py  weights.py
paper/: paper.bib  paper.md
stable/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html
tests/: context.py  log_tess_blocks_edges.txt  mp.py  prague.py  prague_e.py  test_coins.py  test_connectivity.py  test_dimension.py  test_distribution.py  test_diversity.py  test_elements.py  test_graph.py  test_intensity.py  test_preprocess.py  test_shape.py  test_utils.py  test_weights.py  vinohrady.py  zurich.py
toolbox/: area.py  compactness_idx.py  convexity_idx.py  momepy.py  rectangularity_idx.py
v0.1.0/: api.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html
v0.1.1/: api.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html
v0.10.0/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html  searchindex.js
v0.11.0/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html  searchindex.js
v0.2.0/: api.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html
v0.2.1/: api.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html
v0.3.0/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.4.0/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.4.1/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.4.2/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.4.3/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.4.4/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.5.0/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.5.1/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.5.2/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.5.3/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.5.4/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.6.0/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.7.0/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.7.2/: api.html  changelog.html  contributing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.8.0/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html  searchindex.js
v0.8.1/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html  searchindex.js
v0.9.0/: api.html  contributing.html  genindex.html  index.html  install.html  legacy_api.html  py-modindex.html  references.html  search.html  searchindex.js
v0.9.1/: api.html  contributing.html  genindex.html  index.html  install.html  (+5 more)
(+1653 files in other folders)
